k8s/apps/network/envoy-gateway/gateways/referencegrant.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-to-security
  namespace: security
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: documents
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: automation
  to:
    - group: ""
      kind: Service
      name: ak-outpost-proxy
