k8s/apps/network/envoy-gateway/gateways/external.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.kubernetes.io/target: jnobrega.com
    gatus.home-operations.com/endpoint: |-
      interval: 1m
      client:
        dns-resolver: tcp://1.1.1.1:53
      group: External
      alerts:
        - type: pushover
          send-on-resolved: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 192.168.1.252
  listeners:
    - name: web
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: websecure
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: jnobrega.com-tls
