k8s/apps/network/envoy-gateway/gateways/internal.yaml
# yaml-language-server: $schema=https://k8s-schemas-jnobrega.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  labels:
    external-dns.internal/provider: pi-hole
  annotations:
    external-dns.kubernetes.io/target: internal.jnobrega.com
    gatus.home-operations.com/endpoint: |-
      group: Internal
      interval: 1m
      ui:
        hide-hostname: true
        hide-url: true
      alerts:
        - type: pushover
          send-on-resolved: true
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.kubernetes.io/hostname: internal.jnobrega.com
      lbipam.cilium.io/ips: 192.168.1.251
    labels:
      cilium.l2.announce: "true"
  listeners:
    - name: web
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: websecure
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: jnobrega.com-tls
